Fix bug on Safari where frame would grow forever
The <svg> had a margin beneath it, which triggered a resize, which triggered the margin to be added again, which triggered a resize… You get the idea

--- a/Dots.css
+++ b/Dots.css
@@ -9,7 +9,7 @@
 
 .Dots svg,
 .Dots canvas {
-  display: flex;
+  display: block;
 }
 
 .Dots[data-shape="circle"] {
